--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,7 +3,93 @@
 @import 'reset';
 @import 'global';
 
+.logo {
+   display: flex;
+   align-items: center;
+   &__img {
+      margin-right: 10px;
+   }
+   &__name {
+      color: #436372;
+      font-size: 36px;
+      line-height: 58px;
+      @extend %rubik-500;
+   }
+}
 
+.header {
+   padding: 47px 0 50px;
+   &__inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+   }
+}
+
+.menu {
+   &__list {
+      display: flex;
+   }
+   &__list-item + .menu__list-item {
+      padding-left: 35px;
+   }
+   &__list-link {
+      color: $default;
+      font-size: 15px;
+      line-height: 21px;
+      @extend %rubik-500;
+   }
+}
+
+.user-nav {
+   display: flex;
+   &__item + .user-nav__item{
+      margin-left: 20px;
+   }
+   &__item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+   }
+   &__item:nth-child(1) {
+      background-color: #edf1f4;
+   }
+   &__item:nth-child(2){
+      background-color: #fcd7b6;
+      width: 180px;
+      border-radius: 30px;
+   }
+   &__item:nth-child(3) {
+      background-color: #a3bbc8;
+   }
+   &__smart-item {
+      position: relative;
+      padding: 12px 30px 3px;
+   }
+   &__smart-item + .user-nav__smart-item {
+      border-left: 1px solid #fde7d3;
+   }
+   &__num {
+      position: absolute;
+      top: 4px;
+      right: 21px;
+      width: 16px;
+      height: 16px;
+      background-color: #fff;
+      border-radius: 50%;
+      text-align: center;
+      font-size: 10px;
+      line-height: 16px;
+      color: #243f4d;
+      @extend %DMSans-400;
+   }
+
+
+
+}
 
 
 
