--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -3,9 +3,16 @@ body {
    color: $default;
    font-size: 16px;
    line-height: 30px;
+   @extend %rubik-400;
 }
 
 .container {
+   max-width: 1200px;
+   padding: 0 15px;
+   margin: 0 auto;
+}
+
+.container-2 {
    max-width: 1800px;
    padding: 0 15px;
    margin: 0 auto;
