--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -1,5 +1,8 @@
 $default: #436372;
 $title: #191919;
+$subsidiary: #7b7b7b;
+$bg: #fef7f0;
+$second: #a3bbc8;
 
 %rubik-400 {
    font-family: 'Rubik-Regular';
