add section video-popup and part block products-bottom

--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,6 +1,6 @@
 // DMSans 
 @font-face {
-   font-family: 'DMSans-Regular', sans-serif;
+   font-family: 'DMSans-Regular';
    font-style: normal;
    font-weight: 400;
    src: local('DMSans-Regular'),
@@ -10,7 +10,7 @@
 }
 
 @font-face {
-   font-family: 'DMSans-Medium', sans-serif;
+   font-family: 'DMSans-Medium';
    font-style: normal;
    font-weight: 500;
    src: local('DMSans-Medium'),
@@ -20,7 +20,7 @@
 }
 
 @font-face {
-   font-family: 'DMSans-Bold', sans-serif;
+   font-family: 'DMSans-Bold';
    font-style: normal;
    font-weight: 700;
    src: local('DMSans-Bold'),
@@ -31,7 +31,7 @@
 
 // Poppins
 @font-face {
-   font-family: 'Poppins-Bold', sans-serif;
+   font-family: 'Poppins-Bold';
    font-style: normal;
    font-weight: 700;
    src: local('Poppins-Bold'),
@@ -42,7 +42,7 @@
 
 // Rubik
 @font-face {
-   font-family: 'Rubik-Regular', sans-serif;
+   font-family: 'Rubik-Regular';
    font-style: normal;
    font-weight: 400;
    src: local('Rubik-Regular'),
@@ -52,7 +52,7 @@
 }
 
 @font-face {
-   font-family: 'Rubik-Medium', sans-serif;
+   font-family: 'Rubik-Medium';
    font-style: normal;
    font-weight: 500;
    src: local('Rubik-Medium'),
