--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,3 +1,14 @@
+html,
+body {
+   height: 100%;
+   display: flex;
+   flex-direction: column;
+}
+
+main {
+   flex-grow: 1;
+}
+
 body {
    font-weight: 400;
    color: $default;
@@ -17,3 +28,5 @@ body {
    padding: 0 15px;
    margin: 0 auto;
 }
+
+
