--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -2,6 +2,7 @@ $default: #436372;
 $title: #191919;
 $subsidiary: #7b7b7b;
 $bg: #fef7f0;
+$dark-bg: #fcd7b6;
 $second: #a3bbc8;
 
 %rubik-400 {
@@ -32,4 +33,13 @@ $second: #a3bbc8;
 %poppins-700 {
    font-family: 'Poppins-700';
    font-weight: 700;
+}
+
+%btn {
+   color: #fff;
+   background-color: $second;
+   font-size: 14px;
+   line-height: 1;
+   padding: 10px 18px;
+   cursor: pointer;
 }
