--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,6 +1,7 @@
 @import 'vars';
 @import 'fonts';
 @import 'reset';
+@import 'libs';
 @import 'global';
 
 .logo {
@@ -58,7 +59,7 @@
       background-color: #edf1f4;
    }
    &__item:nth-child(2){
-      background-color: #fcd7b6;
+      background-color: $dark-bg;
       width: 180px;
       border-radius: 30px;
    }
@@ -150,13 +151,8 @@
       }
    }
    &__btn {
-      color: #fff;
-      background-color: $second;
       border: none;
-      font-size: 14px;
-      line-height: 1;
-      padding: 10px 18px;
-      cursor: pointer;
+      @extend %btn;
       @extend %DMSans-400;
    }
 }
@@ -190,10 +186,216 @@
    }
 }
 
+.slider-top {
+   background-color: $dark-bg;
+   padding-bottom: 45px;
+   align-items: end;
+   background-image: url('../images/slider-eclipse.png');
+   background-repeat: no-repeat;
+   background-position: right 185px center;
+   padding: 225px 0 45px;
+   &__item {
+      display: flex !important;
+      justify-content: center;
+      align-items: end;
+      // background: url('../images/slider-eclipse.png') no-repeat;
+      // background-position: right center;
+      padding-bottom: 204px;
+   }
+   &__content {
+      margin-right: 123px;
+   }
+   &__title {
+      color: #243f4d;
+      font-size: 72px;
+      line-height: 1;
+      max-width: 415px;
+      text-transform: uppercase;
+      margin-bottom: 23px;
+      @extend %rubik-500;
+   }
+   &__subtitle {
+      font-size: 18px;
+      margin-bottom: 40px;
+      max-width: 360px;
+   }
+   &__btn {
+      padding: 25px 102px 25px 29px;
+      display: inline-block;
+      font-size: 15px;
+      @extend %rubik-500;
+      @extend %btn;
+      position: relative;
+      &::after {
+         content: '';
+         position: absolute;
+         width: 25px;
+         height: 12px;
+         background-image: url(../images/btn-arrow.svg);
+         right: 9px;
+         top: 50%;
+         transform: translateY(-50%)
+      }
+   }
+   &__img {
+      height: 100%;
+   }
+   .slick-dots {
+      display: flex;
+      justify-content: center;
+      li {
+         padding: 0 5px;
+         @extend %rubik-500;
+         button {
+            padding: 0;
+            width: 30px;
+            height: 30px;
+            border: none;
+            border-radius: 50%;
+            text-align: center;
+            color: #243f4d;
+            font-size: 11px;
+            line-height: 1;
+            // background-color: rgba(255,255,255, 0.5);
+            opacity: .3;
+         }
+      }
+      .slick-active {
+         button {
+            opacity: 1;
+         }
+      }
+   }
+}
 
+.slider-bottom {
+   // display: flex;
+   // justify-content: space-around;
+   display: grid;
+   grid-template-columns: repeat(3, 1fr);
+   justify-content: space-around;
+   background-color: $bg;
+   &__item {
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      padding: 45px 0;
+   }
+   &__item + .slider-bottom__item {
+      border-left: 1px solid #e8e4df;
+   }
+   &__content {
+      width: 220px;
+      margin-left: 28px;
+   }
+   &__title {
+      font-size: 18px;
+      line-height: 1;
+      color: #414141;
+      margin-bottom: 15px;
+   }
+   &__text {
+      font-size: 16px;
+      line-height: 30px;
+   }
+   &__img-wrapper {
+      position: relative;
+      &::after {
+         content: '';
+         position: absolute;
+         // display: block;
+         width: 20px;
+         height: 20px;
+         border-radius: 50%;
+         background-color: #dfe3e2;
+         opacity: .35;
+         bottom: -4px;
+         right: -2px;
+      }
+   }
+   &__img {
+      height: 100%;
+      width: 100%;      
+   }
+}
 
+.products {
+   padding: 75px 0 120px;
+}
 
+.products-bottom {
+   padding-top: 100px;
+   &__inner {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: 1fr;
+      min-height: 390px;
+      column-gap: 30px;
+   }
+   &__item {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #feefe2;
+      background-size: 100px;
+      // padding: 45px 0;
+   }
+   &__img {
+      margin-top: -180px;
+      position: relative;
+   }
+   &__content {
+      margin-left: 35px;
+   }
+   &__title {
+      font-size: 26px;
+      line-height: 32px;
+      @extend %DMSans-700;
+      color: #243f4d;
+      margin-bottom: 25px;
+      max-width: 250px;
+   }
+   &__descr {
+      max-width: 340px;
+      margin-bottom: 35px;
+   }
+   &__link {
+      padding: 20px 85px 20px 12px;
+      color: #436372;
+      border: 1px solid #436372;
+      border-radius: 5px;
+      @extend %rubik-500;
+      display: inline-flex;
+      align-items: center;
+      position: relative;
+      transition: all .5s;
+      &::after {
+         position: absolute;
+         content: '';
+         width: 22px;
+         height: 9px;
+         background-image: url('../images/icons/dark-arrow.svg');
+         right: 19px;
+         top: 50%;
+         transform: translateY(-50%);
+      }
+      &:hover {
+         background-color: #fff;
+      }
+   }
+}
 
+.video-popup {
+   padding: 185px 0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-image: url('../images/video-popup-bg.jpg');
+   background-size: cover;
+   background-repeat: no-repeat;
+
+}
+ 
 
 
 @import 'media';
