--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -320,8 +320,90 @@
 }
 
 .products {
-   padding: 75px 0 120px;
+   padding: 65px 0 94px;
 }
+
+.products-top {
+   padding-bottom: 85px;
+   &__menu {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      column-gap: 30px;
+      margin-bottom: 48px;
+   }
+   &__menu-link {
+      color: #8B8B8B;
+      @extend %DMSans-700;
+   }
+   &__items {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      gap: 40px 30px;
+   }
+}
+
+.products-item {
+   text-align: center;
+   max-width:  270px;
+   width: 100%;
+   height: 380px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   justify-content: space-between;
+   box-shadow: 0px 6px 47px 3px rgba(37, 37, 37, 0.05);
+   border-radius: 10px;
+   background-color: #fff;
+   padding: 34px 15px;
+   position: relative;
+   &:hover {
+      .products-item__link-box {
+         opacity: 1;
+      }
+   }
+   &__img-box {
+      flex-grow: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+   }
+   &__img {
+      // margin: auto;
+   }
+   &__link-box {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      display: flex;
+      justify-content: center;
+      column-gap: 16px;
+      opacity: 0;
+      transition: opacity .4s;
+   }
+   &__link {
+      width: 45px;
+      height: 45px;
+      background-color: #fff;
+      border-radius: 50%;
+      border-color: transparent;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      transition: all .4s;
+      &:hover {
+         path {
+            fill: #fff
+         }
+         background-color: $second;
+      }
+   }
+   
+}
+ 
 
 .products-bottom {
    padding-top: 100px;
@@ -386,15 +468,116 @@
 }
 
 .video-popup {
-   padding: 185px 0;
+   padding: 200px 0;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url('../images/video-popup-bg.jpg');
+   background-position: center center;
    background-size: cover;
    background-repeat: no-repeat;
+   &__link {
+      position: relative;
+      &:hover {
+         &::after {
+            transition: width .4s, height .4s;
+            width: 127px;
+            height: 127px;
+         }
+      }
+   }
+   &__link::after {
+      content: "";
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      width: 0;
+      height: 0;
+      // background-color: #A3BBC8;
+      border-radius: 50%;
+      // opacity: 0.4;
+      background-color: rgba(163,187,200,.4);
+      z-index: 1;
+   } 
+   &__play {
+      position: relative;
+      z-index: 20;
 
+   }
 }
+
+.design {
+   padding: 100px 0 120px;
+   @extend %DMSans-700;
+   &__title {
+      margin-bottom: 21px;
+   }
+   &__menu {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      column-gap: 25px;
+      margin-bottom: 75px;
+   }
+   &__menu-link {
+      line-height: 20px;
+      color: #8B8B8B;
+      transition: color .3s;
+      &:hover {
+         color: $title;
+      }
+   }
+   &__items {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 34px 30px;
+   }
+   &__item {
+      display: block;
+      background-color: #f8f8f8;
+      padding-top: 36px;
+      padding-left: 39px;
+      max-width: 370px;
+      height: 246px;
+      position: relative;
+   }
+   &__item-name {
+      display: block;
+      font-size: 20px;
+      line-height: 24px;
+      color: #1a1a1a;
+      max-width: 175px;
+      margin-bottom: 10px;
+      transition: color .4s;
+      &:hover {
+         color: lighten($color: #1a1a1a, $amount: 30);
+      }
+   }
+   &__item-collection {
+      color: $second;
+      transition: color .4s;
+      &:hover {
+         color: darken($color: $second, $amount: 30);
+      }
+   }
+   &__img-wrap {
+      max-width: 270px;
+      position: absolute;
+      bottom: 35px;
+      right: 0;
+   }
+   &__item-img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+   }
+   &__img-wrap--sm {
+      right: 35px
+   }
+}
+
+
  
 
 
