--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -346,7 +346,7 @@
    &__items {
       display: grid;
       grid-template-columns: repeat(4, 1fr);
-      grid-template-rows: repeat(2, 1fr);
+      grid-template-rows: 1fr;
       gap: 40px 30px;
    }
 }
