--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -42,6 +42,16 @@
 
 // Rubik
 @font-face {
+   font-family: 'Rubik-Light';
+   font-style: normal;
+   font-weight: 300;
+   src: local('Rubik-Light'),
+        url('../fonts/Rubik-Light.woff2'),
+        url('../fonts/Rubik-Light.woff');
+   font-display: swap;
+}
+
+@font-face {
    font-family: 'Rubik-Regular';
    font-style: normal;
    font-weight: 400;
