--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -5,6 +5,11 @@ $bg: #fef7f0;
 $dark-bg: #fcd7b6;
 $second: #a3bbc8;
 
+%rubik-300 {
+   font-family: 'Rubik-Light';
+   font-weight: 300;
+}
+
 %rubik-400 {
    font-family: 'Rubik-Regular';
    font-weight: 400;
