--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -779,6 +779,76 @@
    }
 }
 
+.modal {
+   padding: 118px 0 120px;
+   max-width: 475px;
+   margin: 0 auto;
+   width: 100%;
+   &__label {
+      display: block;
+      font-size: 14px;
+      margin-bottom: 14px;
+   }
+   &__input {
+      margin-top: 10px;
+      display: block;
+      width: 100%;
+      height: 60px;
+      padding: 15px 5px;
+      border: 2px solid #F6F6F6;
+   }
+   &__btn {
+      margin: 37px 0 32px;
+      display: block;
+      width: 100%;
+      background-color: $second;
+      border: none;
+      font-size: 18px;
+      line-height: 22px;
+      color: #FFFEFE;
+      padding: 19px 10px;
+      cursor: pointer;
+   }
+   &__bottom {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 30px;
+      border-bottom: 2px solid #F6F6F6;
+   }
+   &__label-checkbox {
+      font-size: 14px;
+      display: flex;
+      align-items: center;
+      margin: 0;
+      cursor: pointer;
+   }
+   &__error {
+      font-size: 14px;
+      color: $default;
+   }
+   &__regist-info {
+      padding-top: 32px;
+      text-align: center;
+   }
+   &__regist-text {
+      margin-bottom: 22px;
+      font-size: 14px;
+   }
+   &__regist-link {
+      display: block;
+      width: 100%;
+      border: 2px solid $second;
+      font-size: 18px;
+      line-height: 22px;
+      @extend %rubik-500;
+      color: #243F4D;
+      padding: 19px 10px;
+   }
+}
+
+
+
 
 
  
