--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -476,6 +476,7 @@
 
 .video-popup {
    padding: 200px 0;
+   margin-bottom: 112px;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -588,7 +589,7 @@
 }
 
 .blog {
-   padding-top: 135px;
+   // padding-top: 135px;
    &__top {
       display: flex;
       justify-content: space-between;
@@ -780,6 +781,10 @@
    }
    &__list-link {
       color: inherit;
+      transition: color .3s;
+      &:hover {
+         color: lighten($color: #222933, $amount: 20);
+      }
    }
 }
 
@@ -852,7 +857,29 @@
    }
 }
 
+.terms {
+   padding: 116px 0 100px;
+   &__title {
+      @extend %rubik-500;
+      font-size: 24px;
+      color: #243F4D;
+      margin-bottom: 22px;
+   }
+   &__list {
+      margin-bottom: 70px;
+      margin-left: 30px;
+   }
+   &__list-item:not(:last-child) {
+      margin-bottom: 20px;
+   }
+   &__list-item {
+      list-style-type: decimal-leading-zero;
+   }
+   &__text:not(:last-child) {
+      margin-bottom: 60px;
+   }
 
+}
 
 
 
