--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -71,4 +71,14 @@
    font-display: swap;
 }
 
+@font-face {
+   font-family: 'Rubik-Bold';
+   font-style: normal;
+   font-weight: 700;
+   src: local('Rubik-Bold'),
+        url('../fonts/Rubik-Bold.woff2'),
+        url('../fonts/Rubik-Bold.woff');
+   font-display: swap;
+}
+
 
