--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -20,6 +20,11 @@ $second: #a3bbc8;
    font-weight: 500;
 }
 
+%rubik-700 {
+   font-family: 'Rubik-Bold';
+   font-weight: 700;
+}
+
 %DMSans-400 {
    font-family: 'DMSans-Regular';
    font-weight: 400;
