--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -40,6 +40,11 @@ $second: #a3bbc8;
    font-weight: 700;
 }
 
+%poppins-600 {
+   font-family: 'Poppins-SemiBold';
+   font-weight: 700;
+}
+
 %poppins-700 {
    font-family: 'Poppins-Bold';
    font-weight: 700;
