--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1019,6 +1019,109 @@
    }
 }
 
+.team {
+   padding: 120px 0 110px;
+   &__inner {
+      display: flex;
+      justify-content: space-between;
+   }
+   &__info {
+      max-width: 306px;
+      width: 100%;
+   }
+   &__title {
+      text-align: left;
+   }
+   &__text {
+      margin-bottom: 38px;
+   }
+   &__link {
+      padding: 15px 65px 15px 22px;
+      background-color: $second;
+      border: 1px solid transparent;
+      border-radius: 5px;
+      color: #fff;
+      @extend %poppins-600;
+      position: relative;
+      transition: all .3s;
+      &::after {
+         content: '';
+         position: absolute;
+         width: 15px;
+         height: 11px;
+         background-image: url('../images/icons/link-arrow-right.svg');
+         background-repeat: no-repeat;
+         top: 20px;
+         right: 26px;
+      }
+      &:hover {
+         background-color: #fff;
+         border: 1px solid $second;
+         border-radius: 5px;
+         color: $second;
+      }
+   }
+   &__items {
+      display: flex;
+      gap: 30px 40px;
+      flex-wrap: wrap;
+      justify-content: flex-end;
+   }
+   &__item {
+      position: relative;
+      padding-bottom: 60px;
+   }
+   &__img-wrapper {
+      max-width: 370px;
+      width: 100%;
+      height: 320px;
+      overflow: hidden;
+   }
+   &__img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+   }
+   &__item-info {
+      position: absolute;
+      z-index: 2;
+      padding: 24px 21px 27px 24px;
+      background-color: #fff;
+      left: -1px;
+      bottom: 0px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+   }
+   &__item-link {
+      width: 41px;
+      height: 41px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #F6F6F6;
+      border-radius: 50%;
+   }
+   &__item-member {
+      margin-right: 53px;
+   }
+   &__item-social {
+      display: flex;
+      align-items: center;
+      column-gap: 7px;
+   }
+   &__item-name {
+      @extend %DMSans-700;
+      font-size: 22px;
+      line-height: 26px;
+      color: $default;
+      margin-bottom: 10px;
+   }
+   &__item-occupation {
+      color: #565872;
+   }
+}
+
 
  
 
