--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -58,3 +58,9 @@ $second: #a3bbc8;
    padding: 10px 18px;
    cursor: pointer;
 }
+%checkbox-hidden {
+   width: 1px;
+   height: 1px;
+   clip: rect(0 0 0 0);
+   position: absolute;
+}
