--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1122,6 +1122,152 @@
    }
 }
 
+.shop {
+   &__inner {
+      display: flex;
+      justify-content: space-between;
+   }
+}
+
+.shop-filter {
+   max-width: 270px;
+   width: 100%;
+   padding: 115px 0 120px;
+   &__item {
+      margin-bottom: 60px;
+      width: 100%;
+   }
+   &__title {
+      display: inline-block;
+      @extend %DMSans-700;
+      text-transform: uppercase;
+      font-size: 18px;
+      line-height: 21.6px;
+      color: #243f4d;
+      position: relative;
+      padding-right: 55px;
+      margin-bottom: 25px;
+      &::after {
+         content: '';
+         position: absolute;
+         width: 38px;
+         height: 2px;
+         background-color: $second;
+         top: 50%;
+         right: 0;
+         transform: translateY(-50%);
+      }
+   }
+}
+
+.filter-category,
+.filter-brand {
+   &__label {
+      display: block;
+      margin-bottom: 5px;
+      cursor: pointer;
+   }
+   &__input {
+      @extend %checkbox-hidden;
+      &:checked + .filter-category__checkbox {
+         background-color: rgba(163, 187, 200, 0.2);
+      }
+      &:checked + .filter-brand__checkbox {
+         background-color: rgba(163, 187, 200, 0.2);
+         .filter-brand__amount {
+            color: #243f4d;
+         }
+      }
+   }
+   &__checkbox {
+      display: flex;
+      justify-content: space-between;
+      padding: 10px 15px;
+      border-radius: 5px;
+      transition: background-color .3s;
+      &:hover {
+         background-color: rgba(163, 187, 200, 0.2);;
+      }
+   }
+   &__amount {
+      color: #b3b3b3;
+      text-align: center;
+   }
+}
+
+.filter-price {
+   &__range {
+      display: flex;
+      justify-content: space-between;
+   }
+}
+
+.irs--flat .irs-line {
+   top: 10px;
+   height: 2px;
+   background-color: rgba(163, 187, 200, 0.66);
+   border-radius: 1px;
+}
+
+.irs--flat .irs-bar {
+   top: 10px;
+   height: 3px;
+   background-color: $second;
+}
+.irs--flat .irs-handle>i:first-child {
+   display: none;
+}
+.irs--flat .irs-handle {
+   top: 4px;
+   width: 15px;
+   height: 15px;
+   background-color: $second;
+}
+
+.filter-recent {
+   &__items {
+      
+   }
+   &__item {
+      display: flex;
+      margin-bottom: 32px;
+      color: #333333;
+      @extend %rubik-400
+   }
+   &__img-wrapper {
+      width: 70px;
+      height: 70px;
+   }
+   &__img {
+      object-fit: contain;
+      width: 100%;
+      height: 100%;
+   }
+   &__item-inner {
+      padding: 0 5px 0 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+   }
+   &__title {
+      font-size: 14px;
+      line-height: 1;
+   }
+   &__price {
+      font-size: 15px;
+      line-height: 1;
+   }
+}
+
+.stars {
+   padding: 0;
+}
+
+
+
+
+
+
 
  
 
