--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -37,3 +37,39 @@ body {
    text-align: center;
    color: $title;
 }
+
+.pagination {
+   display: flex;
+   // justify-content: center;
+   align-items: center;
+   column-gap: 16px;
+   &__list {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      column-gap: 16px;
+   }
+   &__item {
+      text-align: center;
+      vertical-align: middle;
+   }
+   &__link {  
+      width: 50px;
+      height: 50px;
+      border: 1px solid $second;
+      background-color: #fff;
+      text-align: center;
+      color: #243F4D;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   }
+   &__link--active {
+      background-color: $second;
+      color: #fff;
+   }
+   &__arrows {
+      width: auto;
+      padding: 0 19px;
+   }
+}
