--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -407,10 +407,86 @@
          }
          background-color: $second;
       }
-   }
-   
+   } 
+   &__stars,
+   &__text,
+   &__buttons {
+      display: none;
+   } 
+
 }
  
+.products-item.products-item--list {
+   max-width: 100%;
+   text-align: left;
+   height: 500px;
+   display: flex;
+   flex-direction: row;
+   align-items: center;
+   padding: 0;
+   justify-content: flex-start;
+   .products-item {
+      &__img-box {
+         height: 100%;
+         max-width: 370px;
+         width: 100%;
+         display: flex;
+      }
+      &__name {
+         font-size: 40px;
+         @extend %rubik-400;
+         margin-bottom: 15px;
+         color: #333333;
+
+      }
+      &__img {
+         min-width: 70%;
+         object-fit: contain;
+         max-width: 80%;
+      }
+      &__link-box {
+         display: none;
+      }
+      &__info {
+         padding: 83px 10px 75px 60px;
+      }
+      &__stars {
+         display: block;
+         margin-bottom: 25px;
+      }
+      &__text {
+         display: block;
+         margin-bottom: 30px;
+      }  
+      &__price {
+         @extend %rubik-400;
+         font-size: 30px;
+         margin-bottom: 28px;
+         color: #333333;
+      }
+      &__buttons {
+         display: flex;
+      } 
+      &__btn {
+         padding: 0;
+         background-color: transparent;
+         border: 1px solid $second;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+         cursor: pointer;
+         width: 50px;
+         height: 50px;
+         margin-right: 11px;
+      }
+      &__btn--active {
+         background-color: $second;
+         path {
+            fill: #fff;
+         }
+      }
+   }
+}
 
 .products-bottom {
    padding-top: 100px;
@@ -1123,16 +1199,16 @@
 }
 
 .shop {
+   padding: 115px 0 120px;
    &__inner {
       display: flex;
-      justify-content: space-between;
+      // justify-content: space-between;
    }
 }
 
 .shop-filter {
    max-width: 270px;
    width: 100%;
-   padding: 115px 0 120px;
    &__item {
       margin-bottom: 60px;
       width: 100%;
@@ -1262,6 +1338,38 @@
 .stars {
    padding: 0;
 }
+
+.shop-content {
+   max-width: 870px;
+   width: 100%;
+   margin-left: 30px;
+   &__inner {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 40px 30px;
+      align-content: flex-end;
+      margin-bottom: 75px;
+   }
+   &__view {
+      padding: 15px 0;
+      display: flex;
+      align-items: center;
+   }
+   &__view-btn {
+      padding: 0;
+      border: none;
+      background-color: transparent;
+      cursor: pointer;
+      margin-right: 15px;
+   }
+   &__view-btn--active {
+      path {
+         fill: $second;
+      }
+   }
+}
+
+
 
 
 
