--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1301,9 +1301,6 @@
 }
 
 .filter-recent {
-   &__items {
-      
-   }
    &__item {
       display: flex;
       margin-bottom: 32px;
@@ -1369,6 +1366,198 @@
    }
 }
 
+.product {
+   padding: 120px 0 110px;
+   &__inner {
+      display: flex;
+      margin-bottom: 70px;
+   }
+   
+   &__content {
+      padding: 21px 5px 45px 70px;
+   }
+
+   &__title {
+      font-size: 40px;
+      line-height: 47px;
+      color: #333333;
+      margin-bottom: 14px;
+   }
+
+   &__stars {
+      padding: 0;
+      margin-bottom: 20px;
+   }
+
+   &__price {
+      font-size: 30px;
+      line-height: 36px;
+      color: #333333;
+      margin-bottom: 20px;
+   }
+
+   &__text {
+      color: #243F4D;
+      margin-bottom: 30px;
+   }
+}
+
+.product-slide {
+   display: flex;
+   &__thumbs {
+      width: 140px;
+      margin-right: 25px;
+   }
+
+   &__thumbs-item {
+      width: 100%;
+      height: 140px;
+      cursor: pointer;
+   }
+
+   &__thumbs-img {
+      object-fit: contain;
+      width: 100%;
+      height: 100%;
+   }
+
+   &__bigs {
+      width: 387px;
+      height: 530px;
+   }
+
+   &__bigs-item {
+      width: 100%;
+      height: 530px;
+   }
+
+   &__bigs-img {
+      object-fit: scale-down;
+      object-position: center center;
+      width: 100%;
+      height: 100%;
+   }
+   .slick-vertical .slick-slide {
+      height: 140px;
+      margin-bottom: 25px;
+  }
+}
+
+.product-form {
+   &__btn {
+      @extend %btn;
+      padding: 19px 51px;
+      text-transform: uppercase;
+      font-size: 15px;
+      border: transparent;
+      border-radius: 5px;
+      letter-spacing: 0.08em;
+      margin-left: 15px;
+   }
+
+   &__info {
+      margin-top: 40px;
+   }
+
+   &__info-item {
+      display: flex;
+      color: #243F4D;
+   }
+   &__info-text {
+      margin-left: 4px;
+      a {
+         color: inherit;
+      }
+   }
+}
+
+.jq-number {
+   position: relative;
+   vertical-align: middle;
+   padding: 0;
+}
+
+.jq-number__field {
+   width: 148px;
+   height: 52px;
+   border: 1px solid $second;
+   border-bottom-color: $second;
+   border-radius: 0;
+   box-shadow: none;
+}
+
+.jq-number__field input {
+   @extend %rubik-400;
+   font-size: 15px;
+   width: 100%;
+   height: 100%;
+   padding: 8px 9px;
+   border: none;
+   outline: none;
+   background: none;
+   color: #333;
+   text-align: center;
+}
+
+.jq-number__spin {
+   position: absolute;
+   top: 0;
+   right: 0;
+   width: 33%;
+   height: 100%;
+   border: 1px solid $second;
+   border-bottom-color: $second;
+   border-radius: 0px;
+   background: transparent;
+   box-shadow:none;
+   text-shadow: none;
+   cursor: pointer;
+   &:hover {
+      background: transparent;
+  }
+}
+
+.jq-number__spin.minus {
+   top: 0;
+   left: 0;
+   bottom: 0;
+}
+
+.jq-number__spin.plus {
+   top: 0;
+   right: 0;
+   bottom: 0;
+}
+
+.jq-number__spin:after {
+   content: "";
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   font-size: 15px;
+   width: 1em;
+   height: 1em;
+   border: none;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.jq-number__spin.minus:after {
+   content: "-";
+   top: 50%;
+   left: 50%;
+   // transform: translate(-50%, -50%);
+   border: none;
+}
+
+.jq-number__spin.plus:after {
+   content: "+";
+   top: 50%;
+   left: 50%;
+   // transform: translate(-50%, -50%);
+}
 
 
 
