--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1300,6 +1300,35 @@
    background-color: $second;
 }
 
+.filter-search {
+   width: 100%;
+   position: relative;
+   &__input {
+      width: 100%;
+      height: 42px;
+      padding: 10px 58px 10px 10px;
+      border: 1px solid $second;
+      border-radius: 5px;
+      outline: transparent;
+   }
+
+   &__btn {
+      position: absolute;
+      height: 42px;
+      width: 48px;
+      right: 0;
+      top: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #edf1f4;
+      z-index: 2;
+      border: none;
+      cursor: pointer;
+   }
+}
+
+
 .filter-recent {
    &__item {
       display: flex;
@@ -1626,6 +1655,123 @@
       margin: 0 auto;
    }
 }
+
+.blog-page {
+   padding: 120px 0;
+   &__inner {
+      display: flex;
+      justify-content: space-between;
+   }
+
+   &__content {
+      max-width: 830px;
+      margin-right: 70px;
+   }
+
+   &__items {
+      margin-bottom: 75px;
+   }
+
+   &__item {
+      margin-bottom: 50px;
+   }
+
+   &__img-box {
+      width: 100%;
+      position: relative;
+      margin-bottom: 33px;
+   }
+   
+   &__img {
+      height: 100%;
+      width: 100%;
+      object-fit: cover;
+   }   
+
+	&__info {
+      padding: 26px;
+      background-color: $second;
+      position: absolute;
+      left: 0;
+      bottom: 0;
+      display: flex;
+      align-items: center;
+      @extend %rubik-400;
+      color: #fff;
+      font-size: 12px;
+	}
+	&__date {
+      padding-left: 18px;
+      margin-right: 24px;
+      position: relative;
+      &::before {
+         position: absolute;
+         content: '';
+         width: 12px;
+         height: 13px;
+         left: 0;
+         top: 7px;
+         background-image: url('../images/icons/calendar-days.svg');
+      }
+	}
+	&__author {
+      color: inherit;
+      font-family: inherit;
+      font-size: inherit;
+      padding-left: 18px;
+      position: relative;
+      &::before {
+         position: absolute;
+         content: '';
+         width: 12px;
+         height: 13px;
+         left: 0;
+         top: 7px;
+         background-image: url('../images/icons/user-regular.svg');
+      }
+	}
+
+
+   &__title {
+      font-size: 36px;
+      color: #333;
+      @extend %rubik-400;
+      margin-bottom: 30px;
+   }
+
+   &__text {
+      margin-bottom: 35px;
+   }
+
+   &__link {
+      display: inline-flex;
+      align-items: center;
+      border: 1px solid $second;
+      padding: 20px;
+      color: $second;
+      transition: all .3s;
+      svg {
+         margin-left: 47px;
+      }
+      &:hover {
+         background-color: $second;
+         color: #fff;
+         path {
+            transition: fill .3s;
+            fill: #fff;
+         }
+      }
+   }
+
+   &__aside {
+      width: 270px;
+   }
+   .filter-search {
+      margin-bottom: 54px;
+   }
+}
+
+
 
 
 
