--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1772,6 +1772,289 @@
 }
 
 
+.blog-one {
+
+   &__text {
+      padding: 33px 0 40px;
+      border-bottom: 1px solid #EBEBEB;
+      h4 {
+         @extend %rubik-500;
+         font-size: 36px;
+         color: #333;
+         margin-bottom: 20px;
+      }
+      h6 {
+         @extend %rubik-500;
+         color: $title;
+         font-size: 16px;
+         margin-bottom: 20px;
+      }
+      p {
+         margin-bottom: 20px;
+      }
+      blockquote {
+         margin: 40px 0;
+         padding: 20px 90px 20px 40px;
+         border-left: 6px solid $second;
+         background-color: #EDF1F4;
+         color: $title;
+      }
+      cite {
+         display: block;
+         margin-top: 15px;
+         padding-left: 42px;
+         position: relative;
+         &::before {
+            content: '';
+            position: absolute;
+            width: 20px;
+            height: 3px;
+            left: 0;
+            top: 13px;
+            background-color: $second;
+         }
+      }
+      div {
+         margin: 40px 0;
+         h6, p:first-child {
+            padding-top: 15px;
+         }
+      }
+   }
+
+   &__img-left {
+      float: left;
+      margin-right: 30px;
+      // margin-bottom: 15px;
+   }
+
+   &__box {
+      padding: 25px 0;
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 1px solid #EBEBEB;
+      margin-bottom: 60px;
+   }
+
+   &__author {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+   }
+
+   &__author-img {
+      width: 76px;
+      height: 76px;
+      object-fit: cover;
+      margin-right: 27px;
+   }
+
+   &__author-inner {
+   }
+
+   &__author-name {
+      @extend %rubik-500;
+      margin-bottom: 12px;
+   }
+
+   &__box-info {
+      
+      span {
+         min-width: 70px;
+         display: inline-block;
+      }
+      a {
+         color: #999999;
+      }
+   }
+
+   &__share {
+      display: flex;
+   }
+   
+   &__share-list {
+      display: flex;
+      padding-right: 20px;
+      &:last-child {
+         padding-right: 0;
+      }
+   }
+
+   &__share-link {
+      display: inline-block;
+      padding-right: 20px;
+      path {
+         transition: fill .3s;
+         fill: #999;
+      }
+      &:hover {
+         path {
+            fill: $second;
+         }
+      }
+   }
+
+   &__comments {
+      margin-bottom: 90px;
+   }
+}
+
+.comment {
+   padding-top: 30px;
+   display: flex;
+   justify-content: space-between;
+   &:last-child {
+      .comment__content {
+         border-bottom: none;
+         padding-bottom: 0;
+      }
+   }
+   &__title {
+      @extend %rubik-700;
+      font-size: 24px;
+      color: #436372;
+      margin-bottom: 25px;
+   }
+
+   &__avatar {
+      width: 100px;
+      height: 100px;
+      object-fit: cover;
+      margin-right: 30px;
+      margin-top: 6px;
+
+   }
+
+   &__content {
+      padding-bottom: 30px;
+      border-bottom: 1px solid#e0e0e0;
+
+   }
+
+   &__top {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 20px;
+   }
+
+   &__name {
+      @extend %rubik-700;
+      color: #436372;
+   }
+
+   &__date {
+      font-size: 14px;
+      line-height: 16px;
+      color: #9e9e9e;
+   }
+
+   &__text {
+      color: #565872;
+      margin-bottom: 20px;
+   }
+
+   &__reply {
+      font-size: 14px;
+      line-height: 16px;
+      color: #526278;
+      padding-right: 25px;
+      position: relative;
+      &::after {
+         content: '';
+         position: absolute;
+         right: 0;
+         top: 3px;
+         width: 15px;
+         height: 13px;
+         background-image: url('../images/icons/reply.svg')
+      }
+   }
+}
+
+.comment--reply {
+   margin-left: 130px;
+}
+
+.comment-form {
+
+   &__title {
+      @extend %rubik-700;      
+      font-size: 24px;
+      line-height: 30px;
+      color: #436372;
+      margin-bottom: 43px;
+      
+   }
+
+   &__box {
+      display: flex;
+      justify-content: space-between;
+      column-gap: 30px;
+      margin-bottom: 20px;
+      label {
+         width: 50%;
+      }
+   }
+
+   &__label {
+      display: block;
+      position: relative;
+      &::after {
+         position: absolute;
+         content: '';
+         width: 50px;
+         height: 50px;
+         right: 0;
+         top: 0;
+         // bottom: 0;
+         background-repeat: no-repeat;
+         background-position: center center;
+         z-index: 5;
+      }
+      &--name::after {
+         background-image: url('../images/icons/user-void.svg');
+      }
+      &--mail::after {
+         background-image: url('../images/icons/mail.svg');
+      }
+      &--message::after {
+         right: 0;
+         top: 0px;
+         background-image: url('../images/icons/message.svg');
+      }
+   }
+
+   &__input {
+      width: 100%;
+      height: 50px;
+      padding: 0 50px 0 20px;
+      border: 1px solid #E4E4E4;
+      outline: transparent;
+   }
+
+   &__textarea {
+      display: block;
+      width: 100%;
+      padding: 15px 50px 15px 20px;
+      border: 1px solid #E4E4E4;
+      min-height: 120px;
+      resize: none;
+      margin-bottom: 40px;
+      position: relative;
+      outline: transparent;
+   }  
+
+   &__btn {
+      @extend %btn;
+      border: none;
+      padding: 16px 35px;
+      letter-spacing: 0.1rem;
+   }
+}
+
+
+
 
 
 
